--- a/ExtraTrees fetch_olivetti_faces.ipynb
+++ b/ExtraTrees fetch_olivetti_faces.ipynb
@@ -107,7 +107,7 @@
     "from gcforest.gcforest import GCForest\n",
     "from gcforest.gcforest import GCForest\n",
     "from gcforest.utils.config_utils import load_json\n",
-    "config = load_json(\"./examples/olivetti.json\")  # layer = 1   k=10   Extree + DTree\n",
+    "config = load_json(\"./examples/olivetti.json\")   ,
     "gc = GCForest(config)"
    ]
   },
